tests/transpiler/x/hs/dataset_where_filter.error
run: exit status 1

/workspace/mochi/tests/transpiler/x/hs/dataset_where_filter.hs:19:47: error:
    • Couldn't match type ‘Int’ with ‘[Char]’
        arising from selecting the field ‘age’
    • In the ‘age’ field of a record
      In the expression:
        GenType2
          {name = person.name, age = person.age,
           is_senior = person.age >= 60}
      In the expression:
        [GenType2
           {name = person.name, age = person.age,
            is_senior = person.age >= 60} |
           person <- people, person.age >= 18]
   |
19 | adults = [GenType2 {name = person.name, age = person.age, is_senior = person.age >= 60} | person <- people, person.age >= 18]
   |                                               ^^^^^^^^^^

/workspace/mochi/tests/transpiler/x/hs/dataset_where_filter.hs:27:9: error:
    • Couldn't match type ‘[]’ with ‘IO’
      Expected: IO Char
        Actual: [Char]
    • In a stmt of a 'do' block:
        putStrLn show person.name
          ++
            " "
              ++
                "is"
                  ++
                    " "
                      ++
                        show person.age
                          ++ " " ++ if person.is_senior then " (senior)" else ""
      In the expression:
        do putStrLn show person.name
             ++
               " "
                 ++
                   "is"
                     ++
                       " "
                         ++
                           show person.age
                             ++ " " ++ if person.is_senior then " (senior)" else ""
      In the first argument of ‘mapM_’, namely
        ‘(\ person
            -> do putStrLn show person.name
                    ++
                      " "
                        ++
                          "is"
                            ++
                              " " ++ show person.age ++ " " ++ if ... then " (senior)" else "")’
   |
27 |         putStrLn show person.name ++ " " ++ "is" ++ " " ++ show person.age ++ " " ++ if person.is_senior then " (senior)" else ""
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

/workspace/mochi/tests/transpiler/x/hs/dataset_where_filter.hs:27:18: error:
    • Couldn't match type: a0 -> String
                     with: [Char]
      Expected: String
        Actual: a0 -> String
    • Probable cause: ‘show’ is applied to too few arguments
      In the first argument of ‘putStrLn’, namely ‘show’
      In the first argument of ‘(++)’, namely ‘putStrLn show person.name’
      In a stmt of a 'do' block:
        putStrLn show person.name
          ++
            " "
              ++
                "is"
                  ++
                    " "
                      ++
                        show person.age
                          ++ " " ++ if person.is_senior then " (senior)" else ""
   |
27 |         putStrLn show person.name ++ " " ++ "is" ++ " " ++ show person.age ++ " " ++ if person.is_senior then " (senior)" else ""
   |                  ^^^^
